--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --config webpack.config.js",
-    "build": "webpack --config webpack.config.js"
+    "dev": "webpack-dev-server --config ./config/webpack.dev.conf.js",
+    "build": "webpack --config ./config/webpack.prod.conf.js"
   },
   "keywords": [],
   "author": "",
@@ -18,11 +18,15 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.3.0",
     "file-loader": "^6.1.0",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^4.5.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.1",
+    "mini-css-extract-plugin": "^1.0.0",
     "postcss-loader": "^4.0.2",
+    "progress-bar-webpack-plugin": "^2.1.0",
     "style-loader": "^1.2.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.3",
@@ -30,6 +34,7 @@
     "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.2.0"
   }
 }
